# ai_agents_demo

./: .gitignore  README.md  pyproject.toml
src/ai_agents_demo/: crew.py  main.py
src/ai_agents_demo/config/: agents.yaml  tasks.yaml
src/ai_agents_demo/tools/: github_tool.py
