[tool.poetry]
name = "ai_agents_demo"
version = "0.1.0"
description = "ai-agents-demo using crewAI"
authors = ["Lishuai Jing <lishuai.jing@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
ai_agents_demo = "ai_agents_demo.main:run"
train = "ai_agents_demo.main:train"
replay = "ai_agents_demo.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
